fix(MenuItem): remove 'white-space: nowrap' property #590 #959

--- a/packages/retail-ui/components/MenuHeader/MenuHeader.less
+++ b/packages/retail-ui/components/MenuHeader/MenuHeader.less
@@ -6,7 +6,6 @@
     cursor: default;
     font-size: 12px;
     padding: 6px 18px 7px 8px;
-    white-space: nowrap;
 
     &.withLeftPadding {
       padding-left: @menu-item-padding-for-icon;
